--- a/index.html
+++ b/index.html
@@ -1,60 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aarambh Education</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Bootstrap CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <div class="logo">Aarambh Education</div>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#courses">Courses</a></li>
-        <li><a href="#about">About</a></li>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary px-4">
+    <a class="navbar-brand fw-bold" href="#">Aarambh Education</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#courses">Courses</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
       </ul>
-    </nav>
-  </header>
-
-  <section class="hero" id="home">
-    <img src="https://via.placeholder.com/1200x400?text=Learn+with+EduMentor" alt="Hero Banner">
-    <div class="hero-text">
-      <h1>Welcome to Aarambh Education</h1>
-      <p>Unlock your potential with expert-led courses</p>
     </div>
-  </section>
+  </nav>
 
-  <section class="tab-content" id="courses">
-    <h2>Our Courses</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="https://via.placeholder.com/300x200?text=Math+Course" alt="Math">
-        <h3>Mathematics</h3>
-        <p>Foundational to advanced topics in Algebra, Geometry & Calculus.</p>
-      </div>
-      <div class="card">
-        <img src="https://via.placeholder.com/300x200?text=Science+Course" alt="Science">
-        <h3>Science</h3>
-        <p>Physics, Chemistry, and Biology made easy and practical.</p>
-      </div>
-      <div class="card">
-        <img src="https://via.placeholder.com/300x200?text=English+Course" alt="English">
-        <h3>English</h3>
-        <p>Master grammar, vocabulary, and creative writing skills.</p>
+  <!-- Hero Section -->
+  <section class="hero text-center text-white" id="home">
+    <div class="hero-image position-relative">
+      <img src="https://via.placeholder.com/1200x400?text=Welcome+to+Aarambh+Education" class="img-fluid w-100" alt="Hero Banner" />
+      <div class="hero-text position-absolute top-50 start-50 translate-middle bg-dark bg-opacity-50 p-3 rounded">
+        <h1>Welcome to Aarambh Education</h1>
+        <p>Unlock your potential with expert-led courses</p>
       </div>
     </div>
   </section>
 
-  <section class="tab-content" id="about">
-    <h2>About Us</h2>
-    <p>Aarambh Education is a student-first educational platform built by passionate educators and subject experts. We aim to make learning engaging, accessible, and effective for students worldwide.</p>
-    <img src="https://via.placeholder.com/800x300?text=About+EduMentor" alt="About">
+  <!-- Courses Section -->
+  <section class="container py-5" id="courses">
+    <h2 class="text-center mb-4">Our Courses</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card h-100 text-center">
+          <img src="https://via.placeholder.com/300x200?text=Math" class="card-img-top" alt="Math" />
+          <div class="card-body">
+            <h5 class="card-title">Mathematics</h5>
+            <p class="card-text">Foundational to advanced topics in Algebra, Geometry & Calculus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 text-center">
+          <img src="https://via.placeholder.com/300x200?text=Science" class="card-img-top" alt="Science" />
+          <div class="card-body">
+            <h5 class="card-title">Science</h5>
+            <p class="card-text">Physics, Chemistry, and Biology made easy and practical.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 text-center">
+          <img src="https://via.placeholder.com/300x200?text=English" class="card-img-top" alt="English" />
+          <div class="card-body">
+            <h5 class="card-title">English</h5>
+            <p class="card-text">Master grammar, vocabulary, and creative writing skills.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <footer>
-    <p>© 2025 Aarambh Education. All rights reserved.</p>
+  <!-- About Section -->
+  <section class="bg-light py-5" id="about">
+    <div class="container">
+      <h2 class="text-center mb-4">About Us</h2>
+      <p class="text-center mb-4">Aarambh Education is a student-first educational platform built by passionate educators and subject experts. We aim to make learning engaging, accessible, and effective for students worldwide.</p>
+      <div class="text-center">
+        <img src="https://via.placeholder.com/800x300?text=About+Us" class="img-fluid rounded" alt="About" />
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-primary text-white text-center py-3">
+    <p class="mb-0">© 2025 Aarambh Education. All rights reserved.</p>
   </footer>
+
+  <!-- Bootstrap JS (for navbar toggle) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
