--- a/index.html
+++ b/index.html
@@ -2,92 +2,152 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aarambh Education</title>
 
-  <!-- Bootstrap CSS CDN -->
+  <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+    }
+    .hero-image img {
+      width: 100%;
+      max-height: 450px;
+      object-fit: cover;
+    }
+    .hero-text {
+      background-color: rgba(0, 0, 0, 0.6);
+      border-left: 5px solid #ffc107;
+      padding: 20px;
+      color: #fff;
+    }
+    .card:hover {
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      transform: translateY(-5px);
+      transition: 0.3s ease-in-out;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary px-4">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+  <div class="container">
     <a class="navbar-brand fw-bold" href="#">Aarambh Education</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarMain">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#courses">Courses</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="coursesDropdown" role="button" data-bs-toggle="dropdown">Courses</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#courses">JEE Foundation</a></li>
+            <li><a class="dropdown-item" href="#courses">NEET Foundation</a></li>
+            <li><a class="dropdown-item" href="#courses">CLAT/IPMAT</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#courses">Class 6 to 10</a></li>
+          </ul>
+        </li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <!-- Hero Section -->
-  <section class="hero text-center text-white" id="home">
-    <div class="hero-image position-relative">
-      <img src="https://via.placeholder.com/1200x400?text=Welcome+to+Aarambh+Education" class="img-fluid w-100" alt="Hero Banner" />
-      <div class="hero-text position-absolute top-50 start-50 translate-middle bg-dark bg-opacity-50 p-3 rounded">
-        <h1>Welcome to Aarambh Education</h1>
-        <p>Unlock your potential with expert-led courses</p>
-      </div>
+<!-- Hero Section -->
+<section class="hero text-center text-white" id="home">
+  <div class="hero-image position-relative">
+    <img src="https://via.placeholder.com/1200x400?text=Welcome+to+Aarambh+Education" alt="Hero Banner" />
+    <div class="hero-text position-absolute top-50 start-50 translate-middle rounded">
+      <h1>Welcome to Aarambh Education</h1>
+      <p>Unlock your potential with expert-led courses</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Courses Section -->
-  <section class="container py-5" id="courses">
-    <h2 class="text-center mb-4">Our Courses</h2>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="card h-100 text-center">
-          <img src="https://via.placeholder.com/300x200?text=Math" class="card-img-top" alt="Math" />
-          <div class="card-body">
-            <h5 class="card-title">Mathematics</h5>
-            <p class="card-text">Foundational to advanced topics in Algebra, Geometry & Calculus.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card h-100 text-center">
-          <img src="https://via.placeholder.com/300x200?text=Science" class="card-img-top" alt="Science" />
-          <div class="card-body">
-            <h5 class="card-title">Science</h5>
-            <p class="card-text">Physics, Chemistry, and Biology made easy and practical.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card h-100 text-center">
-          <img src="https://via.placeholder.com/300x200?text=English" class="card-img-top" alt="English" />
-          <div class="card-body">
-            <h5 class="card-title">English</h5>
-            <p class="card-text">Master grammar, vocabulary, and creative writing skills.</p>
-          </div>
+<!-- Courses Section -->
+<section class="container py-5" id="courses">
+  <h2 class="text-center mb-4">Our Courses</h2>
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="card h-100 text-center">
+        <img src="https://via.placeholder.com/300x200?text=JEE+Course" class="card-img-top" alt="JEE Course">
+        <div class="card-body">
+          <h5 class="card-title">JEE Foundation</h5>
+          <p class="card-text">Prepare for JEE with strong conceptual clarity from class 9 onwards.</p>
         </div>
       </div>
     </div>
-  </section>
-
-  <!-- About Section -->
-  <section class="bg-light py-5" id="about">
-    <div class="container">
-      <h2 class="text-center mb-4">About Us</h2>
-      <p class="text-center mb-4">Aarambh Education is a student-first educational platform built by passionate educators and subject experts. We aim to make learning engaging, accessible, and effective for students worldwide.</p>
-      <div class="text-center">
-        <img src="https://via.placeholder.com/800x300?text=About+Us" class="img-fluid rounded" alt="About" />
+    <div class="col-md-4">
+      <div class="card h-100 text-center">
+        <img src="https://via.placeholder.com/300x200?text=NEET+Course" class="card-img-top" alt="NEET Course">
+        <div class="card-body">
+          <h5 class="card-title">NEET Foundation</h5>
+          <p class="card-text">Build a solid base in Biology and Chemistry for NEET success.</p>
+        </div>
       </div>
     </div>
-  </section>
+    <div class="col-md-4">
+      <div class="card h-100 text-center">
+        <img src="https://via.placeholder.com/300x200?text=CLAT+Course" class="card-img-top" alt="CLAT Course">
+        <div class="card-body">
+          <h5 class="card-title">CLAT/IPMAT</h5>
+          <p class="card-text">Exclusive law and management entrance coaching for Class 11-12.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="bg-primary text-white text-center py-3">
-    <p class="mb-0">© 2025 Aarambh Education. All rights reserved.</p>
-  </footer>
+<!-- About Section -->
+<section class="bg-light py-5" id="about">
+  <div class="container">
+    <h2 class="text-center mb-4">About Us</h2>
+    <p class="text-center mb-4">Aarambh Education is a student-first coaching platform built by passionate educators and mentors. We focus on building strong academic foundations, exam strategies, and real confidence in every student.</p>
+    <div class="text-center">
+      <img src="https://via.placeholder.com/800x300?text=About+Aarambh+Education" class="img-fluid rounded" alt="About Aarambh">
+    </div>
+  </div>
+</section>
 
-  <!-- Bootstrap JS (for navbar toggle) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Contact Section -->
+<section class="container py-5" id="contact">
+  <h2 class="text-center mb-4">Contact Us</h2>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <form>
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" class="form-control" id="name" placeholder="Your Name">
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea class="form-control" id="message" rows="3" placeholder="How can we help you?"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Send</button>
+      </form>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-primary text-white text-center py-3">
+  <p class="mb-0">© 2025 Aarambh Education. All rights reserved.</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
