--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!-- Hero Section -->
 <section class="hero text-center text-white" id="home">
   <div class="hero-image position-relative">
-    <img src="https://via.placeholder.com/1200x400?text=Welcome+to+Aarambh+Education" alt="Hero Banner" />
+    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?auto=format&fit=crop&w=1350&q=80" alt="Hero Banner" />
     <div class="hero-text position-absolute top-50 start-50 translate-middle rounded">
       <h1>Welcome to Aarambh Education</h1>
       <p>Unlock your potential with expert-led courses</p>
