--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="row g-4">
     <div class="col-md-4">
       <div class="card h-100 text-center">
-        <img src="https://via.placeholder.com/300x200?text=JEE+Course" class="card-img-top" alt="JEE Course">
+        <img src="jee.jpg.jpg" class="card-img-top" alt="JEE Course">
         <div class="card-body">
           <h5 class="card-title">JEE Foundation</h5>
           <p class="card-text">Prepare for JEE with strong conceptual clarity from class 9 onwards.</p>
@@ -88,7 +88,7 @@
     </div>
     <div class="col-md-4">
       <div class="card h-100 text-center">
-        <img src="https://via.placeholder.com/300x200?text=NEET+Course" class="card-img-top" alt="NEET Course">
+        <img src="neet.jpg.jpg" class="card-img-top" alt="NEET Course">
         <div class="card-body">
           <h5 class="card-title">NEET Foundation</h5>
           <p class="card-text">Build a solid base in Biology and Chemistry for NEET success.</p>
@@ -97,7 +97,7 @@
     </div>
     <div class="col-md-4">
       <div class="card h-100 text-center">
-        <img src="https://via.placeholder.com/300x200?text=CLAT+Course" class="card-img-top" alt="CLAT Course">
+        <img src="ipmat.jpg.jpg" class="card-img-top" alt="CLAT/IPMAT Course">
         <div class="card-body">
           <h5 class="card-title">CLAT/IPMAT</h5>
           <p class="card-text">Exclusive law and management entrance coaching for Class 11-12.</p>
