--- a/index.html
+++ b/index.html
@@ -3,91 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aarambh Education</title>
+  <title>Aarambh Education – Home</title>
 
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-      color: #333;
-    }
-
-    .hero {
-      margin-top: 80px; /* Prevent navbar overlap */
-    }
-
-    .hero-image img {
-      width: 100%;
-      max-height: 450px;
-      object-fit: cover;
-    }
-
-    .hero-text {
-      background-color: rgba(0, 0, 0, 0.6);
-      border-left: 5px solid #ffc107;
-      padding: 20px;
-      color: #fff;
-    }
-
-    .hero-text h1 {
-      font-size: 2.5rem;
-    }
-
-    .hero-text p {
-      font-size: 1.2rem;
-    }
-
-    .card {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .card-img-top {
-      height: 200px;
-      object-fit: cover;
-      border-radius: 0.5rem 0.5rem 0 0;
-    }
-
-    .card-body {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    .navbar-brand {
-      font-size: 1.75rem;
-      font-weight: bold;
-    }
-
-    form input, form textarea {
-      border-radius: 0.5rem;
-    }
-
-    form button {
-      border-radius: 0.5rem;
-      padding: 10px 20px;
-    }
-
-    footer {
-      background-color: #004080;
-      color: white;
-    }
-
-    @media (max-width: 768px) {
-      .hero-text h1 {
-        font-size: 1.8rem;
-      }
-
-      .hero-text p {
-        font-size: 1rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -98,105 +18,114 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse justify-content-end" id="navbarMain">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="coursesDropdown" role="button" data-bs-toggle="dropdown">Courses</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#courses">JEE Foundation</a></li>
-            <li><a class="dropdown-item" href="#courses">NEET Foundation</a></li>
-            <li><a class="dropdown-item" href="#courses">CLAT/IPMAT</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#courses">Class 6 to 10</a></li>
-          </ul>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="courses.html">Courses</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- Hero Section -->
-<section class="hero text-center text-white" id="home">
+<!-- Hero Banner -->
+<section class="hero text-white text-center" id="home">
   <div class="hero-image position-relative">
     <img src="jee.jpg.jpg" alt="Hero Banner" class="img-fluid" />
     <div class="hero-text position-absolute top-50 start-50 translate-middle rounded">
-      <h1>Welcome to Aarambh Education</h1>
-      <p>Unlock your potential with expert-led courses</p>
+      <h1>Build Your Path with Aarambh</h1>
+      <p class="mb-0">India’s emerging destination for CUET, Commerce & Humanities success</p>
     </div>
   </div>
 </section>
 
-<!-- Courses Section -->
-<section class="container py-5" id="courses">
-  <h2 class="text-center mb-4">Our Courses</h2>
+<!-- Highlights Section -->
+<section class="container py-5 text-center">
   <div class="row g-4">
     <div class="col-md-4">
-      <div class="card text-center">
-        <img src="jee.jpg.jpg" class="card-img-top" alt="JEE Course">
-        <div class="card-body">
-          <h5 class="card-title">JEE Foundation</h5>
-          <p class="card-text">Prepare for JEE with strong conceptual clarity from class 9 onwards.</p>
-        </div>
-      </div>
+      <h5>Personal Mentorship</h5>
+      <p>One-on-one guidance from experienced subject mentors</p>
     </div>
     <div class="col-md-4">
-      <div class="card text-center">
-        <img src="neet.jpg.jpg" class="card-img-top" alt="NEET Course">
-        <div class="card-body">
-          <h5 class="card-title">NEET Foundation</h5>
-          <p class="card-text">Build a solid base in Biology and Chemistry for NEET success.</p>
-        </div>
-      </div>
+      <h5>Foundational + Competitive</h5>
+      <p>Boards + CUET + Aptitude built together for success</p>
     </div>
     <div class="col-md-4">
-      <div class="card text-center">
-        <img src="ipmat.jpg.jpg" class="card-img-top" alt="CLAT/IPMAT Course">
-        <div class="card-body">
-          <h5 class="card-title">CLAT/IPMAT</h5>
-          <p class="card-text">Exclusive law and management entrance coaching for Class 11-12.</p>
-        </div>
-      </div>
+      <h5>Community-Led Learning</h5>
+      <p>Supportive ecosystem, study groups, doubt-solving, and guidance</p>
     </div>
   </div>
 </section>
 
-<!-- About Section -->
-<section class="bg-light py-5" id="about">
+<!-- Why Aarambh -->
+<section class="bg-light py-5">
   <div class="container">
-    <h2 class="text-center mb-4">About Us</h2>
-    <p class="text-center mb-4">Aarambh Education is a student-first coaching platform built by passionate educators and mentors. We focus on building strong academic foundations, exam strategies, and real confidence in every student.</p>
-    <div class="text-center">
-      <img src="https://via.placeholder.com/800x300?text=About+Aarambh+Education" class="img-fluid rounded" alt="About Aarambh">
+    <h2 class="text-center mb-4">Why Students Choose Aarambh</h2>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <ul>
+          <li>Mentorship from IIM, NLU, DU alumni</li>
+          <li>Interactive classes with recordings & notes</li>
+          <li>Dedicated Telegram group for every batch</li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul>
+          <li>CUET test series + mock analytics</li>
+          <li>Boards + Entrance smart prep plans</li>
+          <li>Workshops on SOPs, career paths, internships</li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
 
-<!-- Contact Section -->
-<section class="container py-5" id="contact">
-  <h2 class="text-center mb-4">Contact Us</h2>
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <form>
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" placeholder="Your Name">
+<!-- Our Programs -->
+<section class="container py-5" id="courses">
+  <h2 class="text-center mb-4">Our Flagship Programs</h2>
+  <div class="row g-4">
+
+    <!-- CUET Foundation -->
+    <div class="col-md-4">
+      <div class="card text-center">
+        <img src="jee.jpg.jpg" class="card-img-top" alt="CUET Foundation">
+        <div class="card-body">
+          <h5 class="card-title">CUET Foundation</h5>
+          <p>Smart foundation for CUET + DUJAT + IPU, covering aptitude, language & general test.</p>
         </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="name@example.com">
-        </div>
-        <div class="mb-3">
-          <label for="message" class="form-label">Message</label>
-          <textarea class="form-control" id="message" rows="3" placeholder="How can we help you?"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Send</button>
-      </form>
+      </div>
     </div>
+
+    <!-- Commerce Stream -->
+    <div class="col-md-4">
+      <div class="card text-center">
+        <img src="neet.jpg.jpg" class="card-img-top" alt="Commerce 11 & 12">
+        <div class="card-body">
+          <h5 class="card-title">Commerce Class 11 & 12</h5>
+          <p>Boards + entrance prep for Accounts, Economics, Business Studies, and beyond.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Humanities Stream -->
+    <div class="col-md-4">
+      <div class="card text-center">
+        <img src="ipmat.jpg.jpg" class="card-img-top" alt="Humanities 11 & 12">
+        <div class="card-body">
+          <h5 class="card-title">Humanities Class 11 & 12</h5>
+          <p>Integrated prep in Psychology, Pol Sci, Sociology & English with CUET support.</p>
+        </div>
+      </div>
+    </div>
+
   </div>
+</section>
+
+<!-- Call to Action -->
+<section class="container text-center py-4">
+  <a href="#" class="btn btn-warning m-2">Download Brochure</a>
+  <a href="#" class="btn btn-outline-primary m-2">Apply for Scholarship</a>
 </section>
 
 <!-- Footer -->
