--- a/index.html
+++ b/index.html
@@ -85,8 +85,6 @@
 <section class="container py-5" id="courses">
   <h2 class="text-center mb-4">Our Flagship Programs</h2>
   <div class="row g-4">
-
-    <!-- CUET Foundation -->
     <div class="col-md-4">
       <div class="card text-center">
         <img src="jee.jpg.jpg" class="card-img-top" alt="CUET Foundation">
@@ -96,8 +94,6 @@
         </div>
       </div>
     </div>
-
-    <!-- Commerce Stream -->
     <div class="col-md-4">
       <div class="card text-center">
         <img src="neet.jpg.jpg" class="card-img-top" alt="Commerce 11 & 12">
@@ -107,8 +103,6 @@
         </div>
       </div>
     </div>
-
-    <!-- Humanities Stream -->
     <div class="col-md-4">
       <div class="card text-center">
         <img src="ipmat.jpg.jpg" class="card-img-top" alt="Humanities 11 & 12">
@@ -118,7 +112,64 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
 
+<!-- Success Stories -->
+<section class="py-5 bg-white">
+  <div class="container">
+    <h2 class="text-center mb-4">Meet Our Achievers</h2>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <blockquote class="blockquote p-4 border rounded">
+          <p>“Thanks to Aarambh’s mentorship and mocks, I cracked CUET and secured admission to Delhi University.”</p>
+          <footer class="blockquote-footer">Simran, CUET Topper 2024</footer>
+        </blockquote>
+      </div>
+      <div class="col-md-6">
+        <blockquote class="blockquote p-4 border rounded">
+          <p>“Balancing boards and CUET was tough until I joined Aarambh. Their combo prep worked wonders.”</p>
+          <footer class="blockquote-footer">Yash, Commerce 12th & CUET Student</footer>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- FAQs -->
+<section class="container py-5">
+  <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+  <div class="accordion" id="faqAccordion">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq1">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true">
+          Is this program online or offline?
+        </button>
+      </h2>
+      <div id="collapse1" class="accordion-collapse collapse show">
+        <div class="accordion-body">Our classes are 100% online, with recordings available for all sessions.</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          Will this cover board syllabus too?
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse">
+        <div class="accordion-body">Yes. Our courses are mapped with NCERT/CBSE boards and synced with entrance exam prep.</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq3">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+          Is mentorship included in all batches?
+        </button>
+      </h2>
+      <div id="collapse3" class="accordion-collapse collapse">
+        <div class="accordion-body">Every student is assigned a mentor for academic and career guidance at no extra cost.</div>
+      </div>
+    </div>
   </div>
 </section>
 
