--- a/index.html
+++ b/index.html
@@ -41,17 +41,20 @@
 </section>
 
 <!-- Highlights Section -->
-<section class="container py-5 text-center">
+<section class="container py-5 text-center bg-white">
   <div class="row g-4">
     <div class="col-md-4">
+      <img src="vector1.png" alt="Mentorship Icon" class="feature-icon mb-2">
       <h5>Personal Mentorship</h5>
       <p>One-on-one guidance from experienced subject mentors</p>
     </div>
     <div class="col-md-4">
+      <img src="vector2.png" alt="Foundational Icon" class="feature-icon mb-2">
       <h5>Foundational + Competitive</h5>
       <p>Boards + CUET + Aptitude built together for success</p>
     </div>
     <div class="col-md-4">
+      <img src="vector3.png" alt="Community Icon" class="feature-icon mb-2">
       <h5>Community-Led Learning</h5>
       <p>Supportive ecosystem, study groups, doubt-solving, and guidance</p>
     </div>
@@ -63,111 +66,41 @@
   <div class="container">
     <h2 class="text-center mb-4">Why Students Choose Aarambh</h2>
     <div class="row row-cols-1 row-cols-md-2 g-4">
-      <div class="col">
-        <ul>
-          <li>Mentorship from IIM, NLU, DU alumni</li>
-          <li>Interactive classes with recordings & notes</li>
-          <li>Dedicated Telegram group for every batch</li>
-        </ul>
-      </div>
-      <div class="col">
-        <ul>
-          <li>CUET test series + mock analytics</li>
-          <li>Boards + Entrance smart prep plans</li>
-          <li>Workshops on SOPs, career paths, internships</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Our Programs -->
-<section class="container py-5" id="courses">
-  <h2 class="text-center mb-4">Our Flagship Programs</h2>
-  <div class="row g-4">
-    <div class="col-md-4">
-      <div class="card text-center">
-        <img src="jee.jpg.jpg" class="card-img-top" alt="CUET Foundation">
-        <div class="card-body">
-          <h5 class="card-title">CUET Foundation</h5>
-          <p>Smart foundation for CUET + DUJAT + IPU, covering aptitude, language & general test.</p>
+      <div class="col d-flex align-items-start">
+        <img src="vector4.png" class="bullet-icon me-3" alt="Bullet Icon">
+        <div>
+          <p>Mentorship from IIM, NLU, DU alumni</p>
         </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card text-center">
-        <img src="neet.jpg.jpg" class="card-img-top" alt="Commerce 11 & 12">
-        <div class="card-body">
-          <h5 class="card-title">Commerce Class 11 & 12</h5>
-          <p>Boards + entrance prep for Accounts, Economics, Business Studies, and beyond.</p>
+      <div class="col d-flex align-items-start">
+        <img src="vector5.png" class="bullet-icon me-3" alt="Bullet Icon">
+        <div>
+          <p>Interactive classes with recordings & notes</p>
         </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card text-center">
-        <img src="ipmat.jpg.jpg" class="card-img-top" alt="Humanities 11 & 12">
-        <div class="card-body">
-          <h5 class="card-title">Humanities Class 11 & 12</h5>
-          <p>Integrated prep in Psychology, Pol Sci, Sociology & English with CUET support.</p>
+      <div class="col d-flex align-items-start">
+        <img src="vector6.png" class="bullet-icon me-3" alt="Bullet Icon">
+        <div>
+          <p>Dedicated Telegram group for every batch</p>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-
-<!-- Success Stories -->
-<section class="py-5 bg-white">
-  <div class="container">
-    <h2 class="text-center mb-4">Meet Our Achievers</h2>
-    <div class="row g-4">
-      <div class="col-md-6">
-        <blockquote class="blockquote p-4 border rounded">
-          <p>“Thanks to Aarambh’s mentorship and mocks, I cracked CUET and secured admission to Delhi University.”</p>
-          <footer class="blockquote-footer">Simran, CUET Topper 2024</footer>
-        </blockquote>
+      <div class="col d-flex align-items-start">
+        <img src="vector7.png" class="bullet-icon me-3" alt="Bullet Icon">
+        <div>
+          <p>CUET test series + mock analytics</p>
+        </div>
       </div>
-      <div class="col-md-6">
-        <blockquote class="blockquote p-4 border rounded">
-          <p>“Balancing boards and CUET was tough until I joined Aarambh. Their combo prep worked wonders.”</p>
-          <footer class="blockquote-footer">Yash, Commerce 12th & CUET Student</footer>
-        </blockquote>
+      <div class="col d-flex align-items-start">
+        <img src="vector8.png" class="bullet-icon me-3" alt="Bullet Icon">
+        <div>
+          <p>Boards + Entrance smart prep plans</p>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
-
-<!-- FAQs -->
-<section class="container py-5">
-  <h2 class="text-center mb-4">Frequently Asked Questions</h2>
-  <div class="accordion" id="faqAccordion">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="faq1">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true">
-          Is this program online or offline?
-        </button>
-      </h2>
-      <div id="collapse1" class="accordion-collapse collapse show">
-        <div class="accordion-body">Our classes are 100% online, with recordings available for all sessions.</div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="faq2">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
-          Will this cover board syllabus too?
-        </button>
-      </h2>
-      <div id="collapse2" class="accordion-collapse collapse">
-        <div class="accordion-body">Yes. Our courses are mapped with NCERT/CBSE boards and synced with entrance exam prep.</div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="faq3">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
-          Is mentorship included in all batches?
-        </button>
-      </h2>
-      <div id="collapse3" class="accordion-collapse collapse">
-        <div class="accordion-body">Every student is assigned a mentor for academic and career guidance at no extra cost.</div>
+      <div class="col d-flex align-items-start">
+        <img src="vector9.png" class="bullet-icon me-3" alt="Bullet Icon">
+        <div>
+          <p>Workshops on SOPs, career paths, internships</p>
+        </div>
       </div>
     </div>
   </div>
