--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <li class="nav-item"><a class="nav-link" href="courses.html">Courses</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="#mentors">Mentors</a></li>
+        <li class="nav-item"><a class="nav-link" href="#testimonials">Feedback</a></li>
       </ul>
     </div>
   </div>
@@ -104,6 +106,25 @@
       </div>
     </div>
   </div>
+</section>
+
+<!-- Sections for Courses, Mentors, Testimonials etc. -->
+<section class="container py-5" id="courses">
+  <h2 class="text-center mb-4">Our Flagship Programs</h2>
+  <!-- Program cards here -->
+</section>
+
+<section class="bg-light py-5" id="mentors">
+  <div class="container">
+    <h2 class="text-center mb-4">Meet Our Mentors</h2>
+    <p class="text-center">Real mentors. Real results. From top IIMs, NLUs & DU.</p>
+    <!-- Mentor profiles here -->
+  </div>
+</section>
+
+<section class="container py-5" id="testimonials">
+  <h2 class="text-center mb-4">What Students Say</h2>
+  <!-- Testimonials here -->
 </section>
 
 <!-- Call to Action -->
